--- a/.github/workflows/wordpress-plugin-asset-update.yml
+++ b/.github/workflows/wordpress-plugin-asset-update.yml
@@ -2,7 +2,7 @@ name: Plugin asset/readme update
 on:
   push:
     branches:
-      - master
+      - main
     tags-ignore:
       - '*'
 jobs:
@@ -16,7 +16,7 @@ jobs:
     - name: npm build
       run: npm run build
     - name: WordPress.org plugin asset/readme update
-      uses: 10up/action-wordpress-plugin-asset-update@master
+      uses: 10up/action-wordpress-plugin-asset-update@stable
       env:
         SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
         SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
