🚀 Deploy assets only for trunk branch

--- a/.github/workflows/wordpress-plugin-asset-update.yml
+++ b/.github/workflows/wordpress-plugin-asset-update.yml
@@ -2,12 +2,12 @@ name: Plugin asset/readme update
 on:
   push:
     branches:
-      - main
+      - trunk
     tags-ignore:
       - '*'
 jobs:
-  master:
-    name: Push to master
+  trunk:
+    name: Asset update
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
