--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@wordpress/scripts": "^26.1.0",
     "@wordpress/server-side-render": "^4.7.0",
     "extract-loader": "^5.1.0",
-    "ignore-emit-webpack-plugin": "^2.0.6"
+    "file-loader": "^6.2.0",
+    "ignore-emit-webpack-plugin": "^2.0.6",
+    "mini-css-extract-plugin": "^2.7.5"
   }
 }
