--- a/.distignore
+++ b/.distignore
@@ -1,15 +1,19 @@
 .distignore
+.eslintignore
+.eslintrc
 .git
 .github
-.wordpress-org
-node_modules/
-src/
-package.json
-package-lock.json
-ruleset.xml
-webpack.config.js
-*scss/
 .phpcs.xml
+.prettierignore
+.prettierrc.js
+.wordpress-org
+*scss/
 composer.json
 composer.lock
+node_modules/
+package-lock.json
+package.json
 phpstan.neon.dist
+ruleset.xml
+src/
+webpack.config.js
